# meloda

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  smithery.yaml
.github/workflows/: publish.yml  test.yml
docs/: PUBLISHING.md  SUBMISSION.md
meloda_mcp/: __init__.py  __main__.py  api_client.py  config.py  http_app.py  resources.py  server.py
meloda_mcp/tools/: __init__.py  datasets.py  portals.py  stats.py
tests/: conftest.py  test_api_client.py  test_http_app.py  test_resources.py  test_smoke.py  test_tools.py
tests/fixtures/: dataset_detail.json  dataset_resources.json  datasets_montilla_p2.json  portal_montilla.json  portals.json
