[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meloda-mcp"
version = "0.2.0"
description = "MCP server for the Spanish Open Data Reuse Monitor (spain.meloda.org). Exposes ~700k datasets across 43 portals via Model Context Protocol."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Alberto Abella", email = "alberto.abella@transparentia.net" },
]
keywords = ["mcp", "model-context-protocol", "open-data", "spain", "meloda", "dcat", "ckan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
http = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "slowapi>=0.1.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
meloda-mcp = "meloda_mcp.__main__:main"

[project.urls]
Homepage = "https://spain.meloda.org"
Repository = "https://github.com/albertoabellagarcia/meloda"
Documentation = "https://spain.meloda.org/mcp"
Issues = "https://github.com/albertoabellagarcia/meloda/issues"

[tool.hatch.build.targets.wheel]
packages = ["meloda_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
